# azure-maintie-rag

./: .blackignore  .deployment_keyvault_name  .deployment_search_name  .deployment_storage_name  .deployment_token  .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  2025-08-03-this-session-is-being-continued-from-a-previous-co.txt  AGENT_SIMPLIFICATION_MIGRATION_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_FIXES_SUMMARY.md  AZURE_DEPLOYMENT_SOLUTION.md  AZURE_SETUP_GUIDE.md  AZURE_UNIVERSAL_RAG_DOCUMENTATION.md  CICD_MIGRATION_SUMMARY.md  CICD_SETUP.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODING_STANDARDS.md  COMPREHENSIVE_DATAFLOW_DEBUG_REPORT.md  COMPREHENSIVE_INTEGRATION_TESTING_GUIDE.md  COMPREHENSIVE_LIFECYCLE_VALIDATION_REPORT.md  COMPREHENSIVE_SYSTEM_TEST_REPORT.md  COMPREHENSIVE_VALIDATION_REPORT.md  CONFIG_LAYER_BOUNDARY_FIX_PLAN.md  CRITICAL_WORKFLOW_REDESIGN.md  DEBUGGING_SUCCESS_REPORT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_READY.md  DEPLOYMENT_REPORT.md  Dockerfile  ENTERPRISE_ARCHITECTURE_SUMMARY.md  EXAMPLE_azure-dev.yml  FINAL_DEPLOYMENT_SUMMARY.md  FIX_AZURE_AUTH.md  HARDCODED_VALUES_CLEANUP.md  IMPLEMENTATION_COMPLETE.md  (+72 more)
.claude/: CLAUDE.md  architecture-context.md  coding-rules.md  current-priorities.md  file-guide.md  settings.local.json
@agents/: PRODUCTION_READY.md  REFACTORING_COMPLETE.md  UNIVERSAL_RAG_SOLUTION.md  __init__.py  orchestrator.py
agents/: AGENT_ARCHITECTURE_DESIGN.md  HARDCODED_VALUES_CENTRALIZATION_SUMMARY.md  README.md  UNIVERSAL_RAG_SOLUTION.md  __init__.py  orchestrator.py  pydantic_ai_integration.py  simplified_orchestration.py  validation_steps.py
api/: API_REFERENCE.md  main.py
archive/: CLEANUP_REPORT.md
backend/: .coverage  API_ENDPOINTS_FIXED.md  ARCHITECTURE_OVERVIEW.md  AZURE_RAG_EXECUTION_PLAN.md  AZURE_RAG_FINAL_SUMMARY.md  AZURE_RAG_LIFECYCLE_EXECUTION_REPORT.md  BACKEND_QUICKSTART.md  BACKEND_STRUCTURE.md  CORE_CLEANUP_PLAN.md  CORE_SERVICES_TEST_RESULTS.md  DEVELOPER_GUIDE.md  DEVELOPMENT_STATUS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_TABLE_OF_CONTENTS.md  DOMAIN_PATTERNS_ARCHITECTURE.md  ENTITIES_VS_KNOWLEDGE_GRAPH_CLARIFICATION.md  GNN_CLASSIFICATION_EXPLANATION.md  GNN_REAL_INTEGRATION_SUCCESS.md  HARDCODED_VALUE_CENTRALIZATION.md  KNOWLEDGE_GRAPH_GNN_RELATIONSHIP.md  Makefile  Makefile.backup  OUR_BASIC_KNOWLEDGE_GRAPH.md  OUR_ENHANCED_KNOWLEDGE_GRAPH.md  README.md  STRUCTURE_VALIDATION.md  TESTING_LOG.md  azure_config_validation_report.json  debug_actual_storage.py  debug_env_loading.py  debug_settings.py  demo_results_final.json  demo_universal_rag_migration.py  extract_texts.py  load_real_demo_data.py  pyproject.toml  pytest.ini  requirements-cache.txt  requirements.txt  test_actual_settings.py  (+8 more)
config/: AGGRESSIVE_CLEANUP_DETAILED_PLAN.md  CODEBASE_IMPACT_ANALYSIS.md  CONFIGURATION_COMPLEXITY_AUDIT.md  CONFIGURATION_INTELLIGENCE_ANALYSIS.md  INTELLIGENT_CONFIGURATION_ROADMAP.md  PARAMETER_EVALUATION_PLAN.md  PHASE_1_PARAMETER_ANALYSIS.md  PHASE_2_IMPLEMENTATION_PLAN.md  README.md  __init__.py  advanced_settings.py  azure_settings.py  centralized_config.py  centralized_config.py.backup  clean_config.py  prompt_templates.py  (+6 more)
(+1718 files in other folders)
