[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  | .venv
  | data
  | logs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["agents", "api", "services", "infrastructure", "config"]
skip_glob = ["data/*", "logs/*", ".venv/*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-universal-rag"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "services*", "infrastructure*", "config*", "data*"]
