[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  | .venv
  | data
  | logs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["agents", "api", "services", "infrastructure", "config"]
skip_glob = ["data/*", "logs/*", ".venv/*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "azure-universal-rag"
version = "1.0.0"
description = "Production-grade multi-agent Azure Universal RAG system with PydanticAI framework"
authors = [{name = "Azure Universal RAG Team"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["azure", "rag", "pydantic-ai", "multi-agent", "knowledge-graph", "vector-search"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydantic-ai>=0.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "azure-identity>=1.15.0",
    "azure-openai>=1.0.0",
    "azure-search-documents>=11.4.0",
    "azure-cosmos>=4.5.0",
    "azure-storage-blob>=12.19.0",
    "azure-ai-ml>=1.12.0",
    "azure-keyvault-secrets>=4.7.0",
    "azure-monitor-opentelemetry>=1.2.0",
    "torch>=2.0.0",
    "torch-geometric>=2.3.0",
    "networkx>=3.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
    "httpx>=0.25.0",
    "asyncio>=3.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/azure-universal-rag/azure-maintie-rag"
Repository = "https://github.com/azure-universal-rag/azure-maintie-rag.git"
Documentation = "https://github.com/azure-universal-rag/azure-maintie-rag/docs"
Issues = "https://github.com/azure-universal-rag/azure-maintie-rag/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "api*", "services*", "infrastructure*", "config*", "data*"]
